<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:checked="false"
            android:icon="@drawable/ic_inbox_black"
            android:title="@string/home" />

        <item
            android:id="@+id/a1"
            android:checked="false"
            android:icon="@drawable/ic_inbox_black"
            android:title="@string/a1" />

        <item
            android:id="@+id/a2"
            android:checked="false"
            android:icon="@drawable/ic_star_black"
            android:title="@string/a2" />

        <item
            android:id="@+id/a3"
            android:checked="false"
            android:icon="@drawable/ic_send_black"
            android:title="@string/a3" />

        <item
            android:id="@+id/a4"
            android:checked="false"
            android:icon="@drawable/ic_drafts_black"
            android:title="@string/a4" />


        <item
            android:id="@+id/a5"
            android:checked="false"
            android:icon="@drawable/ic_email_black"
            android:title="@string/a5" />

        <item
            android:id="@+id/a6"
            android:checked="false"
            android:icon="@drawable/ic_delete_black"
            android:title="@string/a6" />

        <item
            android:id="@+id/a7"
            android:checked="false"
            android:icon="@drawable/ic_error_black"
            android:title="@string/a7" />

        <item
            android:id="@+id/a8"
            android:checked="false"
            android:icon="@drawable/ic_error_black"
            android:title="@string/a8" />

        <item
            android:id="@+id/a9"
            android:checked="false"
            android:icon="@drawable/ic_error_black"
            android:title="@string/a9" />

        <item
            android:id="@+id/a10"
            android:checked="false"
            android:icon="@drawable/ic_error_black"
            android:title="@string/a10" />

        <item
            android:id="@+id/a11"
            android:checked="false"
            android:icon="@drawable/ic_error_black"
            android:title="@string/a11" />

        <item
            android:id="@+id/a12"
            android:checked="false"
            android:icon="@drawable/ic_error_black"
            android:title="@string/a12" />

        <item
            android:id="@+id/a13"
            android:checked="false"
            android:icon="@drawable/ic_error_black"
            android:title="@string/a13" />

        <item
            android:id="@+id/a14"
            android:checked="false"
            android:icon="@drawable/ic_error_black"
            android:title="@string/a14" />

        <item
            android:id="@+id/a15"
            android:checked="false"
            android:icon="@drawable/ic_error_black"
            android:title="@string/a15" />

        <item
            android:id="@+id/a16"
            android:checked="false"
            android:icon="@drawable/ic_error_black"
            android:title="@string/a16" />

        <item
            android:id="@+id/a17"
            android:checked="false"
            android:icon="@drawable/ic_error_black"
            android:title="@string/a17" />

        <item
            android:id="@+id/a18"
            android:checked="false"
            android:icon="@drawable/ic_error_black"
            android:title="@string/a18" />

        <item
            android:id="@+id/a19"
            android:checked="false"
            android:icon="@drawable/ic_error_black"
            android:title="@string/a19" />

        <item
            android:id="@+id/a20"
            android:checked="false"
            android:icon="@drawable/ic_error_black"
            android:title="@string/a20" />

        <item
            android:id="@+id/a21"
            android:checked="false"
            android:icon="@drawable/ic_error_black"
            android:title="@string/a21" />

        <item
            android:id="@+id/a22"
            android:checked="false"
            android:icon="@drawable/ic_error_black"
            android:title="@string/a22" />

        <item
            android:id="@+id/a23"
            android:checked="false"
            android:icon="@drawable/ic_error_black"
            android:title="@string/a23" />

    </group>
</menu>